# catenia

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  to do.md
catenia/: __init__.py  lightning.py  nn.py  optim.py  tensor.py
catenia/utils/: data.py  utils.py
datasets/boston/: readme.md
datasets/mnist/: idx.py  readme.md
examples/: example_classification.py  example_conv2d.py  example_crossentropy1.py  example_crossentropy2.py  example_lightning.py  example_regression.py  example_tensor.py
tests/: test_tensor.py
